--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".Main">
+        <activity android:name=".Intro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,12 +28,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Intro"/>
         <activity android:name=".Login" />
         <activity android:name=".Signup"/>
         <activity android:name=".Ageeinfo" />
         <activity android:name=".gps" />
-        <activity android:name=".tab1_read"/>
+        <activity android:name=".Main" />
+        <activity android:name=".Tab1_read"/>
+        <activity android:name=".Tab2_read"/>
+        <activity android:name=".Tab3_read"/>
+        <activity android:name=".Tab4_read"/>
+        <activity android:name=".View_img"/>
 
         <!-- [START gcm_receiver] -->
         <receiver
