--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.5.+'
      testCompile 'junit:junit:4.12'
     compile files('libs/libDaumMapAndroid.jar')
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
 
 
