--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".Tab3_read"/>
         <activity android:name=".Tab4_read"/>
         <activity android:name=".View_img"/>
+        <activity android:name=".YoutubeActivity"/>
 
         <!-- [START gcm_receiver] -->
         <receiver
