--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -32,6 +33,11 @@ dependencies {
      testCompile 'junit:junit:4.12'
     compile files('libs/libDaumMapAndroid.jar')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+
+    androidTestCompile 'com.android.support:support-annotations:23.0.1'
+    androidTestCompile 'com.android.support.test:runner:0.4'
+    androidTestCompile 'com.android.support.test:rules:0.4'
+
 }
 
 
