--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,13 @@
     <!-- 테스크 권한 -->
     <uses-permission android:name="android.permission.GET_TASKS" />​
 
-
+    <!-- Out of Memory 메모리 할당 높이기 android:largeHeap="true" -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".Intro">
             <intent-filter>
