--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         <activity android:name=".Main" />
         <activity android:name=".Tab1_read"/>
         <activity android:name=".Tab2_read"/>
+        <activity android:name=".Tab2_detail"/>
+        <activity android:name=".Tab2_addpoint"
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".Tab3_read"/>
         <activity android:name=".Tab4_read"/>
         <activity android:name=".View_img"/>
